resources/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wealthfolio
  namespace: wealthfolio
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: wealthfolio
  template:
    metadata:
      labels:
        app: wealthfolio
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: wealthfolio
          image: wealthfolio
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8088
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: wealthfolio
