resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wealthfolio
  namespace: wealthfolio
spec:
  type: ClusterIP
  ports:
  - port: 8088
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: wealthfolio
