resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wealthfolio
  namespace: wealthfolio
  annotations:
    external-dns.alpha.kubernetes.io/hostname: stonk.crt.house
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "stonk.crt.house"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: wealthfolio
                port:
                  number: 8088
  tls:
    - hosts:
      - stonk.crt.house
